Html da página de login

--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,22 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <div id="totalScreen">
+        <div id="leftScreen"></div>
+        <div id="rightScreen">
+            <div id="loginBox">
+                <div id="login">
+                    <form action="">
+                        <label for="user">Usuário/E-mail</label>
+                        <input type="text" name="user" id="user" required>
+                        <label for="password">Senha</label>
+                        <input type="password" name="password" id="password" required>
+                        <button type="submit">Entrar</button>
+                    </form>
+                    <a href="register.html">Registrar</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
