--- a/public/login.html
+++ b/public/login.html
@@ -4,6 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <style>
+        body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            margin: 0;
+            padding: 0;
+            color: #FFFFFF;
+            overflow: hidden;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        #totalScreen {
+            display: flex;
+            width: 100vw;
+            height: 100dvh;
+        }
+
+        #leftScreen {
+            background-color: #000000;
+            width: 50%;
+            height: 100%;
+        }
+
+        #rightScreen {
+            background-color: grey;
+            width: 50%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #loginBox {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 65%;
+            height: 50%;
+            border: black 1px solid;
+            border-radius: 30px;
+            padding: 20px;
+        }
+
+        #login {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            border: black 1px solid;
+            border-radius: 30px;
+            gap: 30px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            width: 40%;
+            height: auto;
+            gap: 20px;
+        }
+
+        input:focus {
+            outline: none;
+        }
+
+        #password, #user {
+            border-radius: 16px;
+            padding: 7px 10px;
+        }
+
+        #submitBtn {
+            padding: 10px;
+            border-radius: 16px;
+            border: none;
+            cursor: pointer;
+        }
+
+
+    </style>
 </head>
 <body>
     <div id="totalScreen">
@@ -16,7 +99,7 @@
                         <input type="text" name="user" id="user" required>
                         <label for="password">Senha</label>
                         <input type="password" name="password" id="password" required>
-                        <button type="submit">Entrar</button>
+                        <button type="submit" id="submitBtn">Entrar</button>
                     </form>
                     <a href="register.html">Registrar</a>
                 </div>
