CSS básico register

--- a/public/login.html
+++ b/public/login.html
@@ -66,7 +66,7 @@
             flex-direction: column;
             width: 40%;
             height: auto;
-            gap: 20px;
+            gap: 10px;
         }
 
         input:focus {
@@ -76,6 +76,7 @@
         #password, #user {
             border-radius: 16px;
             padding: 7px 10px;
+            border: none;
         }
 
         #submitBtn {
@@ -83,6 +84,7 @@
             border-radius: 16px;
             border: none;
             cursor: pointer;
+            margin-top: 30px;
         }
 
 
