--- a/public/login.html
+++ b/public/login.html
@@ -43,7 +43,7 @@
             justify-content: center;
             align-items: center;
             width: 65%;
-            height: 50%;
+            height: 45%;
             border: black 1px solid;
             border-radius: 30px;
             padding: 20px;
@@ -59,6 +59,7 @@
             border: black 1px solid;
             border-radius: 30px;
             gap: 30px;
+            padding: 10px;
         }
 
         form {
@@ -97,7 +98,7 @@
             <div id="loginBox">
                 <div id="login">
                     <form action="">
-                        <label for="user">Usuário/E-mail</label>
+                        <label for="user">Usuário</label>
                         <input type="text" name="user" id="user" required>
                         <label for="password">Senha</label>
                         <input type="password" name="password" id="password" required>
