--- a/public/login.html
+++ b/public/login.html
@@ -74,7 +74,7 @@
             outline: none;
         }
 
-        #password, #user {
+        #password, #name {
             border-radius: 16px;
             padding: 7px 10px;
             border: none;
@@ -98,8 +98,8 @@
             <div id="loginBox">
                 <div id="login">
                     <form action="">
-                        <label for="user">Usuário</label>
-                        <input type="text" name="user" id="user" required>
+                        <label for="name">Usuário</label>
+                        <input type="text" name="name" id="name" required>
                         <label for="password">Senha</label>
                         <input type="password" name="password" id="password" required>
                         <button type="submit" id="submitBtn">Entrar</button>
