--- a/public/register.html
+++ b/public/register.html
@@ -73,7 +73,7 @@
             outline: none;
         }
 
-        #password, #user, #confirmPassword, #email {
+        #password, #name, #confirmPassword, #email {
             border-radius: 16px;
             padding: 7px 10px;
             border: none;
@@ -97,8 +97,8 @@
             <div id="loginBox">
                 <div id="login">
                     <form action="">
-                        <label for="user">Usuário</label>
-                        <input type="text" name="user" id="user" required>
+                        <label for="name">Usuário</label>
+                        <input type="text" name="name" id="name" required>
                         <label for="email">E-mail</label>
                         <input type="text" name="email" id="email" required>
                         <label for="password">Senha</label>
