--- a/public/register.html
+++ b/public/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registro</title>
     <style>
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -100,12 +100,12 @@
                         <label for="name">Usuário</label>
                         <input type="text" name="name" id="name" required>
                         <label for="email">E-mail</label>
-                        <input type="text" name="email" id="email" required>
+                        <input type="email" name="email" id="email" required>
                         <label for="password">Senha</label>
                         <input type="password" name="password" id="password" required>
                         <label for="password">Confirme a senha</label>
                         <input type="password" name="confirmPassword" id="confirmPassword" required>
-                        <button type="submit" id="submitBtn">Entrar</button>
+                        <button type="submit" id="submitBtn">Registrar</button>
                     </form>
                     <a href="login.html">Login</a>
                 </div>
@@ -155,12 +155,6 @@
                 .catch(err => {
                     console.error(err);
                 });
-            });
-
-            confirmPassword.addEventListener('keydown', (e) => {
-                if (e.key === 'Enter') {
-                    submitBtn.click();
-                }
             });
         });
     </script>
