Iniciando página principal

--- a/public/login.html
+++ b/public/login.html
@@ -137,6 +137,8 @@
                         alert(data.error);
                     } else {
                         alert(data.message);
+                        alert(data.user.name);
+                        alert(data.user.email);
                         window.location.href = "index.html";
                     }
                 })
