--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Tarefas</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <title>Tarefas</title>
 </head>
 <body>
-    
+    <div id="totalScreen">
+        <header>
+            <h1>Sábado, 21/01/2025</h1>
+        </header>
+        <div id="botScreen">
+            <aside>
+                <div id="menu">
+                    <h2>Menu</h2>
+                    <ul>
+                        <li><i class="fa-solid fa-sun"></i><a href="">Dia</a></li>
+                        <li><i class="fa-solid fa-star"></i><a href="">Favoritos</a></li>
+                    </ul>
+                </div>
+            </aside>
+            <main></main>
+        </div>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
