Ajustes no front-end da página principal

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,14 @@
                 <div id="menu">
                     <h2>Menu</h2>
                     <ul>
-                        <li><i class="fa-solid fa-sun"></i><a href="">Dia</a></li>
-                        <li><i class="fa-solid fa-star"></i><a href="">Favoritos</a></li>
+                        <li><i class="fa-solid fa-sun"></i><a href="">Meu Dia</a></li>
+                        <li><i class="fa-solid fa-star"></i><a href="">Importante</a></li>
                     </ul>
                 </div>
             </aside>
-            <main></main>
+            <main>
+                <div id="tasks"></div>
+            </main>
         </div>
     </div>
 
