Mecanismo do container das tarefas finalizado

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,13 @@
                 </div>
             </aside>
             <main>
-                <div id="tasks"></div>
+                <div id="tasks">
+                    <div id="menuTasks"></div>
+                    <div class="task"><input type="checkbox"><p>CENTRAL DE INDISPONIBILIDADE DE BENS - atendendo ao disposto no Provimento 39/2014 do Conselho Nacional de Justiça informo que, nesta data, promovi prévia consulta à base de dados da Central Nacional de Indisponibilidade de Bens - CNIB, no site https://www.indisponibilidade.org.br, obtendo o resultado "negativo" para os CPFs das partes, conforme comprovam, respectivamente, os códigos HASH ******************************</p></div>
+                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
+                </div>
+                <div id="completeTasks"></div>
+                <hr>
             </main>
         </div>
     </div>
