Função de adicionar task concluída

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,7 @@
                     <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
                     <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
                     <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
-                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
-                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
-                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
-                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
+                    <div class="task"><input type="checkbox"><input type="text" id="taskInput" class="taskInput" autocomplete="off" readonly></div>
                 </div>
                 <hr>
                 <div id="menuTasksComplete">
