Funcionalidades adicionadas às tasks

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,7 @@
                     <h2><i class="fa-solid fa-house"></i>Tarefas</h2>
                     <button id="addTask">Adicionar tarefa</button>
                 </div>
-                <div id="tasks">
-                    <div class="task"><input type="checkbox"><p>CENTRAL DE INDISPONIBILIDADE DE BENS - atendendo ao disposto no Provimento 39/2014 do Conselho Nacional de Justiça informo que, nesta data, promovi prévia consulta à base de dados da Central Nacional de Indisponibilidade de Bens - CNIB, no site https://www.indisponibilidade.org.br, obtendo o resultado "negativo" para os CPFs das partes, conforme comprovam, respectivamente, os códigos HASH ******************************</p></div>
-                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
-                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
-                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
-                    <div class="task"><input type="checkbox"><p>Começar bem o dia</p></div>
-                    <div class="task"><input type="checkbox"><input type="text" id="taskInput" class="taskInput" autocomplete="off" readonly></div>
-                </div>
+                <div id="tasks"></div>
                 <hr>
                 <div id="menuTasksComplete">
                     <h4><i class="fa-solid fa-circle-check"></i>Concluídas</h4>
