Funções relacionanads a interações com as tasks concluídas

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <main>
                 <div id="menuTasks">
                     <h2><i class="fa-solid fa-house"></i>Tarefas</h2>
-                    <button id="addTask">Adicionar tarefa</button>
+                    <button id="addTask" class="iconBtn"><h1><i class="fa-solid fa-plus"></i></h1></button>
                 </div>
                 <div id="tasks"></div>
                 <hr>
