--- a/public/login.html
+++ b/public/login.html
@@ -137,8 +137,7 @@
                         alert(data.error);
                     } else {
                         alert(data.message);
-                        alert(data.user.name);
-                        alert(data.user.email);
+                        localStorage.setItem('token', data.token); // Armazena o token no navegador
                         window.location.href = "index.html";
                     }
                 })
@@ -147,6 +146,8 @@
                 });
             });
         });
+
+        export default token;
 
     </script>
 </body>
