--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,6 @@
         </div>
     </div>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
