--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <div id="totalScreen">
         <header>
             <h1>Sábado, 21/01/2025</h1>
+            <button id="logoutBtn"><h1><i class="fa-solid fa-right-from-bracket"></i></h1></button>
         </header>
         <div id="botScreen">
             <aside>
