Função de data concluída

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
 <body>
     <div id="totalScreen">
         <header>
-            <h1>Sábado, 21/01/2025</h1>
+            <div id="dateContainer">
+                <h1 id="weekDayHeader"></h1>
+                <h3 id="dateHeader"></h3>
+            </div>
             <button id="logoutBtn"><h1><i class="fa-solid fa-right-from-bracket"></i></h1></button>
         </header>
         <div id="botScreen">
