--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
             <div id="dateContainer">
                 <h1 id="weekDayHeader"></h1>
                 <h3 id="dateHeader"></h3>
-            </div>
-            <button id="logoutBtn"><h1><i class="fa-solid fa-right-from-bracket"></i></h1></button>
+            </div>''
+            <button class="iconBtn"><h1><i class="fa-solid fa-right-from-bracket"></i></h1></button>
         </header>
         <div id="botScreen">
             <aside>
@@ -22,7 +22,6 @@
                     <h2>Menu</h2>
                     <ul>
                         <li><i class="fa-solid fa-sun"></i><a href="">Meu Dia</a></li>
-                        <li><i class="fa-solid fa-star"></i><a href="">Importante</a></li>
                     </ul>
                 </div>
             </aside>
