--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,12 @@
             <div id="dateContainer">
                 <h1 id="weekDayHeader"></h1>
                 <h3 id="dateHeader"></h3>
-            </div>''
-            <button class="iconBtn"><h1><i class="fa-solid fa-right-from-bracket"></i></h1></button>
-        </header>
+            </div>
+            <div id="userContainer">
+                <button id="vsModeBtn" class="iconBtn"><h2><i id="iconBtn" class="fa-regular fa-sun"></i></h2></button>
+                <button id="logoutBtn" class="iconBtn"><h2><i class="fa-solid fa-right-from-bracket"></i></h2></button>
+            </div>
+            </header>
         <div id="botScreen">
             <aside>
                 <div id="menu">
