--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
         <div id="botScreen">
             <aside>
                 <div id="menu">
-                    <h2>Menu</h2>
+                    <h2 id="menuHeader"><i class="fa-solid fa-list"></i>Agenda</h2>
                     <ul>
-                        <li><i class="fa-solid fa-sun"></i><a href="">Meu Dia</a></li>
+                        <li><i class="fa-solid fa-circle fa-2xs"></i><a href="">Meu Dia</a></li>
                     </ul>
                 </div>
             </aside>
