Ajustes na interface

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
                 <h3 id="dateHeader"></h3>
             </div>
             <div id="userContainer">
-                <button id="vsModeBtn" class="iconBtn"><h2><i id="iconBtn" class="fa-regular fa-sun"></i></h2></button>
-                <button id="logoutBtn" class="iconBtn"><h2><i class="fa-solid fa-right-from-bracket"></i></h2></button>
+                <button id="vsModeBtn" class="iconBtn tooltipBtn"><h2><i id="iconBtn" class="fa-regular fa-sun"></i></h2><span class="tooltipText">Light/Dark mode</span></button>
+                <button id="logoutBtn" class="iconBtn tooltipBtn"><h2><i class="fa-solid fa-right-from-bracket"></i></h2><span class="tooltipText">Sair</span></button>
             </div>
             </header>
         <div id="botScreen">
@@ -31,7 +31,7 @@
             <main>
                 <div id="menuTasks">
                     <h2><i class="fa-solid fa-house"></i>Tarefas</h2>
-                    <button id="addTask" class="iconBtn"><h1><i class="fa-solid fa-plus"></i></h1></button>
+                    <button id="addTask" class="iconBtn tooltipBtn"><h1><i class="fa-solid fa-plus"></i></h1><span class="tooltipText">Adicionar tarefa</span></button>
                 </div>
                 <div id="tasks"></div>
                 <hr>
