--- a/public/register.html
+++ b/public/register.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Registro - Gerenciador de Tarefas - </title>
     <style>
         body {
