--- a/public/login.html
+++ b/public/login.html
@@ -100,7 +100,7 @@
         input:focus {
             outline: none;
         }
-
+        
         #password, #name {
             border-radius: 16px;
             padding: 7px 10px;
@@ -179,12 +179,13 @@
                         alert(data.error);
                     } else {
                         alert(data.message);
-                        localStorage.setItem('token', data.token); // Armazena o token no navegador
+                        sessionStorage.setItem('token', data.token); // Armazena o token no navegador
                         window.location.href = "index.html";
                     }
                 })
                 .catch(err => {
                     console.error(err);
+                    alert("Erro de conexão. Por favor, tente novamente mais tarde.");
                 });
             });
         });
