--- a/public/register.html
+++ b/public/register.html
@@ -197,6 +197,7 @@
                 })
                 .catch(err => {
                     console.error(err);
+                    alert("Erro de conexão. Por favor, tente novamente mais tarde.");
                 });
             });
         });
