Ajustes visuais e modo claro

--- a/public/login.html
+++ b/public/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Login - Gerenciador de Tarefas - </title>
     <style>
@@ -37,11 +38,18 @@
             width: 100%;
             height: 10%;
             padding: 15px;
+            gap: 10px;
         }
 
         #header h1 {
             font-weight: bold;
             font-size: 25px;
+            color: #a392ca;
+        }
+
+        #header i {
+            font-size: 20px;
+            color: #a392ca;
         }
 
         #body {
@@ -128,13 +136,43 @@
             text-decoration: none;
         }
 
+        /* Loader */
+        #loading {
+            position: fixed; /* Fixa o elemento na tela inteira */
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100dvh;
+            background-color: rgba(0, 0, 0, 0.8); /* Fundo escuro com transparência */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999; /* Garante que fique acima de outros elementos */
+            color: #a392ca; /* Cor do texto e ícone, combinando com o seu tema */
+            font-size: 1.5rem; /* Tamanho do texto */
+        }
+
+        #loading i {
+            margin-right: 10px; /* Espaçamento entre o ícone e o texto */
+            font-size: 2rem; /* Tamanho do ícone */
+            animation: spin 1s linear infinite; /* Animação de rotação */
+        }
+
+        @keyframes spin {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
 
     </style>
 </head>
 <body>
     <div id="totalScreen">
         <div id="leftScreen">
-            <div id="header"><h1>Gerenciador de Tarefas</h1></div>
+            <div id="header"><h1>Gerenciador de Tarefas</h1><i class="fa-solid fa-circle"></i></div>
             <div id="body"></div>
         </div>
         <div id="rightScreen">
@@ -153,15 +191,24 @@
         </div>
     </div>
 
+    <!-- Div de Loading -->
+    <div id="loading" style="display: none;">
+        <i class="fa-solid fa-spinner fa-spin"></i>
+    </div>
+
     <script>
 
         document.addEventListener('DOMContentLoaded', () => {
             const submitBtn = document.getElementById('submitBtn');
+            const loading = document.getElementById('loading');
             
             submitBtn.addEventListener('click', (e) => {
                 e.preventDefault();
                 const name = document.getElementById('name').value;
                 const password = document.getElementById('password').value;
+
+                // Mostra o loader
+                loading.style.display = "flex";
 
                 fetch('http://localhost:5000/login', {
                     method: 'POST',
@@ -175,15 +222,21 @@
                 })
                 .then(res => res.json())
                 .then(data => {
+                    // Esconde o loader
+                    loading.style.display = "none";
+
                     if (data.error) {
                         alert(data.error);
                     } else {
-                        alert(data.message);
+                        console.log(data.message);
                         sessionStorage.setItem('token', data.token); // Armazena o token no navegador
                         window.location.href = "index.html";
                     }
                 })
                 .catch(err => {
+                    // Esconde o loader
+                    loading.style.display = "none";
+
                     console.error(err);
                     alert("Erro de conexão. Por favor, tente novamente mais tarde.");
                 });
