--- a/public/register.html
+++ b/public/register.html
@@ -37,11 +37,18 @@
             width: 100%;
             height: 10%;
             padding: 15px;
+            gap: 10px;
         }
 
         #header h1 {
             font-weight: bold;
             font-size: 25px;
+            color: #a392ca;
+        }
+
+        #header i {
+            font-size: 20px;
+            color: #a392ca;
         }
 
         #body {
@@ -134,7 +141,7 @@
 <body>
     <div id="totalScreen">
         <div id="leftScreen">
-            <div id="header"><h1>Gerenciador de Tarefas</h1></div>
+            <div id="header"><h1>Gerenciador de Tarefas</h1><i class="fa-solid fa-circle"></i></div>
             <div id="body"></div>
         </div>
         <div id="rightScreen">
