--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,11 @@
         </div>
     </div>
 
+    <!-- Div de Loading -->
+    <div id="loading" style="display: none;">
+        <i class="fa-solid fa-spinner fa-spin"></i>
+    </div>
+
     <script src="./js/main.js" type="module"></script>
 </body>
 </html>
